--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,9 +3,62 @@
 @import 'reset';
 @import 'global';
 
-
-
-
+.header{
+  padding: 40px 0;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.menu{
+  &__list{
+    display: flex;
+  }
+  &__list-item + .menu__list-item{
+    padding-left: 35px;
+  }
+  &__list-link{
+    @extend %quicksand-400;
+    color: $title;
+    text-transform: uppercase;
+    padding-bottom: 1px;
+    transition: color 0.3s;
+    
+    &:hover{
+      @extend %quicksand-500;
+      color: $accent;
+      border-bottom: 1px solid $accent
+    }
+  }
+  &__list-link--active{
+    @extend %quicksand-500;
+    color: $accent;
+    border-bottom: 1px solid $accent
+  }
+}
+.user-nav{
+  display: flex;
+  &__link{
+    position: relative;
+  }
+  &__link + .user-nav__link{
+    padding-left: 25px;
+  }
+  &__num{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $accent;
+    top: -9px;
+    right: -14px;
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
+  }
+}
 
 
 @import 'media';
