--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header{
@@ -19,20 +20,20 @@
     padding-left: 35px;
   }
   &__list-link{
-    @extend %quicksand-400;
+    @extend %roboto-400;
     color: $title;
     text-transform: uppercase;
-    padding-bottom: 1px;
+    padding-bottom: 0 2px 1px;
     transition: color 0.3s;
     
     &:hover{
-      @extend %quicksand-500;
+      @extend %roboto-700;
       color: $accent;
       border-bottom: 1px solid $accent
     }
   }
   &__list-link--active{
-    @extend %quicksand-500;
+    @extend %roboto-700;
     color: $accent;
     border-bottom: 1px solid $accent
   }
@@ -60,6 +61,77 @@
   }
 }
 
+.top-slider{
+  background-image: url('../images/top-slider-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: $bg;
+  padding: 65px 0 45px;
+  &__container{
+    max-width: 1560px;
+  }
+  &__content{
+    padding-left: 175px;
+    padding-top: 125px;
+  }
+  &__item{
+    display: flex !important;
+    justify-content: space-between;
+  }
+  &__title{
+    max-width: 670px;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
+  &__text{
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+  &__link{
+    @extend %btn;
+    padding: 14px 36px;
+  }
+  .slick-dots{
+    display: flex;
+    justify-content: center;
+    margin-top: -70px;
+    li{
+      padding: 0 5px;
+      line-height: 0;
+      button{
+        position: r;
+        width: 26px;
+        height: 26px;
+        border: 1px solid transparent;
+        border-radius: 50%;
+        position: relative;
+        &::before{
+          position: absolute;
+          content: '';
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      &.slick-active{
+        button{
+          border-color: $accent;
+          &::before{
+            background-color: $accent;
+          }
+        }
+        
+      }
+    }
+  }
+}
 
 
 
@@ -144,11 +216,8 @@
     }
   }
   &__form-btn{
-    background-color: $accent;
-    color: #fff;
-    text-transform: uppercase;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
-    padding: 12px 26px;
+    @extend %btn;
+    border: none;
     cursor: pointer;
   }
 }
