--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,49 +4,58 @@
 @import 'libs';
 @import 'global';
 
-.header{
+.header {
   padding: 40px 0;
-  &__inner{
+
+  &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
-.menu{
-  &__list{
+
+.menu {
+  &__list {
     display: flex;
   }
-  &__list-item + .menu__list-item{
+
+  &__list-item+.menu__list-item {
     padding-left: 35px;
   }
-  &__list-link{
+
+  &__list-link {
     @extend %roboto-400;
     color: $title;
     text-transform: uppercase;
     padding-bottom: 0 2px 1px;
     transition: color 0.3s;
-    
-    &:hover{
+
+    &:hover {
       @extend %roboto-700;
       color: $accent;
       border-bottom: 1px solid $accent
     }
   }
-  &__list-link--active{
+
+  &__list-link--active {
     @extend %roboto-700;
     color: $accent;
     border-bottom: 1px solid $accent
   }
 }
-.user-nav{
+
+.user-nav {
   display: flex;
-  &__link{
+
+  &__link {
     position: relative;
   }
-  &__link + .user-nav__link{
+
+  &__link+.user-nav__link {
     padding-left: 25px;
   }
-  &__num{
+
+  &__num {
     position: absolute;
     width: 20px;
     height: 20px;
@@ -61,24 +70,28 @@
   }
 }
 
-.top-slider{
-  background-image: url('../images/top-slider-bg.png');
+.top-slider {
+  background-image: url('../images/decor/top-slider-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-color: $bg;
   padding: 65px 0 45px;
-  &__container{
+
+  &__container {
     max-width: 1560px;
   }
-  &__content{
+
+  &__content {
     padding-left: 175px;
     padding-top: 125px;
   }
-  &__item{
+
+  &__item {
     display: flex !important;
     justify-content: space-between;
   }
-  &__title{
+
+  &__title {
     max-width: 670px;
     font-size: 58px;
     line-height: 68px;
@@ -86,29 +99,35 @@
     @extend %roboto-700;
     margin-bottom: 35px;
   }
-  &__text{
+
+  &__text {
     max-width: 470px;
     margin-bottom: 55px;
   }
-  &__link{
+
+  &__link {
     @extend %btn;
     padding: 14px 36px;
   }
-  .slick-dots{
+
+  .slick-dots {
     display: flex;
     justify-content: center;
     margin-top: -70px;
-    li{
+
+    li {
       padding: 0 5px;
       line-height: 0;
-      button{
+
+      button {
         position: r;
         width: 26px;
         height: 26px;
         border: 1px solid transparent;
         border-radius: 50%;
         position: relative;
-        &::before{
+
+        &::before {
           position: absolute;
           content: '';
           width: 6px;
@@ -120,18 +139,129 @@
           transform: translate(-50%, -50%);
         }
       }
-      &.slick-active{
-        button{
+
+      &.slick-active {
+        button {
           border-color: $accent;
-          &::before{
+
+          &::before {
             background-color: $accent;
           }
         }
-        
       }
     }
   }
 }
+.categories-info{
+  padding: 120px 0;
+  background-image: url('../images/decor/categories-left-bg.png');
+  background-repeat: no-repeat;
+  background-position: center left;
+  &__inner{
+    background-image: url('../images/decor/categories-right-bg.png');
+  background-repeat: no-repeat;
+    background-position: center right;
+  }
+}
+.info{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+  position: relative;
+  &::before,
+  &::after{
+    content: '';
+    position: absolute;
+  }
+  &::before{
+    background-image: url('../images/decor/info-befor.svg');
+    top: -40px;
+    left: -45px;
+    width: 120px;
+    height: 121px;
+  }
+  &::after{
+    background-image: url('../images/decor/info-after.svg');
+    bottom: -24px;
+    right: -24px;
+    width: 65px;
+    height: 52px;
+  }
+  &__item{
+    position: relative;
+    background-color: #fff;
+    z-index: 1;
+    padding: 60px 30px;
+    width: 370px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+  }
+  &__item-title{
+    margin: 35px 0 10px;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+  }
+}
+.categories{
+  &__items{
+    display: grid;
+    min-height: 650px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat (2, 1fr);
+    grid-gap: 30px;
+  }
+  &__item{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding-top: 35px;
+    padding-left: 40px;
+    &:nth-child(1){
+      grid-row: span 2;
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #5800e4;
+      }
+    }
+    &:nth-child(2){
+      grid-column: span 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: $accent;
+        padding-top: 0;
+      }
+    }
+    &:nth-child(3){
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #ffb93c;
+      }
+    }
+    &:nth-child(4){
+      .categories__item-subtitle,
+      .categories__link:hover{
+        color: #4dc8fc;
+      }
+    }
+  }
+  &__item-subtitle{
+    margin-bottom: 5px;
+  }
+  &__item-title{
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 16px;
+  }
+  &__link{
+    text-transform: uppercase;
+    color: $title;
+    @extend %roboto-400;
+    transition: all 0.3s;
+  }
+}
 
 
 
@@ -139,95 +269,111 @@
 
 
 
-
-.footer{
+.footer {
   background-color: $bg;
 }
-.footer-top{
+
+.footer-top {
   padding: 70px 0 40px;
   border-bottom: 1px solid #ececec;
   display: flex;
-  &__contact{
+
+  &__contact {
     width: 250px;
     margin-right: 50px;
   }
-  &__nav{
+
+  &__nav {
     width: 170px;
     margin-right: 30px;
   }
-  &__item-form{
+
+  &__item-form {
     max-width: 470px;
   }
-  &__logo{
+
+  &__logo {
     display: block;
     margin-bottom: 33px;
   }
-  
+
   &__adress,
- &__email,
- &__phone{
+  &__email,
+  &__phone {
     margin-bottom: 14px;
     display: block;
   }
 
-  &__social-list{
+  &__social-list {
     display: flex;
     align-items: center;
     margin-top: 30px;
   }
-  &__social-item + .footer-top__social-item{
+
+  &__social-item+.footer-top__social-item {
     padding-left: 18px;
   }
-  &__social-link{
+
+  &__social-link {
     transition: all .3s;
-    path{
+
+    path {
       fill: $default;
     }
-    &:hover{
-      path{
+
+    &:hover {
+      path {
         fill: $accent;
       }
     }
   }
-  &__title{
+
+  &__title {
     color: $title;
     @extend %roboto-400;
     font-size: 22px;
     margin-bottom: 40px;
     line-height: 1;
   }
-  &__link{
+
+  &__link {
     display: block;
     margin-bottom: 14px;
   }
-  &__text{
+
+  &__text {
     margin-bottom: 25px;
   }
-  &__form-input{
+
+  &__form-input {
     background-color: #fff;
     max-width: 320px;
     width: 100%;
     border: none;
     box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
     padding: 12px 10px 12px 15px;
-    &::placeholder{
+
+    &::placeholder {
       color: $default;
       font-size: 16px;
     }
   }
-  &__form-btn{
+
+  &__form-btn {
     @extend %btn;
     border: none;
     cursor: pointer;
   }
 }
-.footer-bottom{
+
+.footer-bottom {
   height: 75px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 12px;
-  &__accept-img{
+
+  &__accept-img {
     display: inline;
     margin-left: 25px;
     vertical-align: middle;
